--- a/infrastructure/resources/s3-cloudfront.yaml
+++ b/infrastructure/resources/s3-cloudfront.yaml
@@ -52,6 +52,8 @@ Resources:
           - DomainName: !GetAtt WebSiteBucketNew.RegionalDomainName
             Id: myS3Origin
             OriginAccessControlId: !GetAtt CloudFrontOriginAccessControlNew.Id
+            S3OriginConfig:
+              OriginAccessIdentity: ""
         Enabled: true
         DefaultRootObject: index.html
         HttpVersion: http2
