--- a/template.yaml
+++ b/template.yaml
@@ -53,13 +53,13 @@ Resources:
         ResidentGroupName: !Ref ResidentGroupName
         GuardGroupName: !Ref GuardGroupName
 
-  # S3BucketCloudFrontStack:
-  #   Type: AWS::CloudFormation::Stack
-  #   Properties:
-  #     TemplateURL: ./infrastructure/resources/s3-cloudfront.yaml
-  #     Parameters:
-  #       AcmCertificateArn: !Ref AcmCertificateArn
-  #       GlobalCloudFrontHostedZoneId: !Ref GlobalCloudFrontHostedZoneId
+  S3BucketCloudFrontStack:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      TemplateURL: ./infrastructure/resources/s3-cloudfront.yaml
+      Parameters:
+        AcmCertificateArn: !Ref AcmCertificateArn
+        GlobalCloudFrontHostedZoneId: !Ref GlobalCloudFrontHostedZoneId
 
   # Uncomment on fresh deployment only
   # HostedZoneStack:
@@ -160,15 +160,15 @@ Outputs:
   APIGatewayEndpoint:
     Description: API Gateway endpoint URL for Prod stage
     Value: !Sub https://${ApiGatewayLambdaStack.Outputs.ApiGatewayApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/
-  # CloudFrontDistributionId:
-  #   Description: CloudFront Distribution ID for hosting web front end
-  #   Value: !GetAtt S3BucketCloudFrontStack.Outputs.CloudFrontDistribution
-  # CloudFrontDistributionDomainName:
-  #   Description: CloudFront Distribution Domain Name for accessing web front end
-  #   Value: !GetAtt S3BucketCloudFrontStack.Outputs.CloudFrontDistributionDomainName
-  # WebS3BucketName:
-  #   Description: S3 Bucket for hosting web frontend
-  #   Value: !GetAtt S3BucketCloudFrontStack.Outputs.WebS3BucketName
+  CloudFrontDistributionId:
+    Description: CloudFront Distribution ID for hosting web front end
+    Value: !GetAtt S3BucketCloudFrontStack.Outputs.CloudFrontDistribution
+  CloudFrontDistributionDomainName:
+    Description: CloudFront Distribution Domain Name for accessing web front end
+    Value: !GetAtt S3BucketCloudFrontStack.Outputs.CloudFrontDistributionDomainName
+  WebS3BucketName:
+    Description: S3 Bucket for hosting web frontend
+    Value: !GetAtt S3BucketCloudFrontStack.Outputs.WebS3BucketName
   UserPoolId:
     Description: Cognito User Pool ID
     Value: !Ref CognitoUserPool
