--- a/infrastructure/resources/s3-cloudfront.yaml
+++ b/infrastructure/resources/s3-cloudfront.yaml
@@ -110,7 +110,7 @@ Resources:
     Type: AWS::CloudFront::OriginAccessControl
     Properties:
       OriginAccessControlConfig:
-        Name: !Sub "CloudFrontS3OAC-Frontend-${WebSiteBucket}"
+        Name: !Sub "OAC-${WebSiteBucket}"
         OriginAccessControlOriginType: s3
         SigningBehavior: always
         SigningProtocol: sigv4
