--- a/template.yaml
+++ b/template.yaml
@@ -18,7 +18,7 @@ Parameters:
     Description: The Cognito User Pool domain prefix
   AcmCertificateArn:
     Type: String
-    Default: arn:aws:acm:us-east-1:121216464768:certificate/4f441ddb-b0d2-493d-b2d0-e5b3ed387553
+    Default: arn:aws:acm:us-east-1:121216464768:certificate/701751b5-62e5-4526-935f-aeae48311e3e
     Description: The public certificate arn in us-east-1 region
   AdminGroupName:
     Type: String
@@ -162,7 +162,7 @@ Outputs:
     Value: !Sub https://${ApiGatewayLambdaStack.Outputs.ApiGatewayApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/
   CloudFrontDistributionId:
     Description: CloudFront Distribution ID for hosting web front end
-    Value: !GetAtt S3BucketCloudFrontStack.Outputs.CloudFrontDistribution
+    Value: !GetAtt S3BucketCloudFrontStack.Outputs.CloudFrontDistributionId
   CloudFrontDistributionDomainName:
     Description: CloudFront Distribution Domain Name for accessing web front end
     Value: !GetAtt S3BucketCloudFrontStack.Outputs.CloudFrontDistributionDomainName
