--- a/template.yaml
+++ b/template.yaml
@@ -14,7 +14,6 @@ Parameters:
     Description: The Global CloudFront Hosted Zone ID
   HostedZoneId:
     Type: String
-    Default: Z05731382UESHZXWSGHWA
     Description: The Domain Hosted Zone ID
   CognitoDomainPrefix:
     Type: String
@@ -85,7 +84,10 @@ Resources:
       TemplateURL: ./infrastructure/resources/record-set.yaml
       Parameters:
         GlobalCloudFrontHostedZoneId: !Ref GlobalCloudFrontHostedZoneId
-        HostedZoneId: !Ref HostedZoneId
+        HostedZoneId: !If
+          - CreateHostedZoneCondition
+          - !GetAtt HostedZoneStack.Outputs.HostedZoneId
+          - !Ref HostedZoneId
 
   CognitoUserPool:
     Type: AWS::Cognito::UserPool
