--- a/template.yaml
+++ b/template.yaml
@@ -51,6 +51,16 @@ Resources:
     Properties:
       TemplateURL: ./infrastructure/resources/hosted-zone.yaml
 
+  CertificateStack:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      TemplateURL: ./infrastructure/resources/acm-certificate.yaml
+      Parameters:
+        HostedZoneId: !If
+          - CreateHostedZoneCondition
+          - !GetAtt HostedZoneStack.Outputs.HostedZoneId
+          - !Ref HostedZoneId
+
   ApiGatewayLambdaStack:
     Type: AWS::CloudFormation::Stack
     Properties:
