Default: arn:aws:acm:us-east-1:121216464768:certificate/701751b5-62e5-4526-935f-aeae48311e3e

--- a/template.yaml
+++ b/template.yaml
@@ -21,6 +21,7 @@ Parameters:
     Description: The Cognito User Pool domain prefix
   AcmCertificateArn:
     Type: String
+    Default: arn:aws:acm:us-east-1:121216464768:certificate/701751b5-62e5-4526-935f-aeae48311e3e
     Description: The public certificate arn in us-east-1 region
   AdminGroupName:
     Type: String
@@ -39,16 +40,9 @@ Parameters:
     AllowedValues: [true, false]
     Default: false
     Description: Whether to create the hosted zone
-  CreatePublicCertificate:
-    Type: String
-    AllowedValues: [true, false]
-    Default: false
-    Description: Whether to create the public certificate
 
 Conditions:
   CreateHostedZoneCondition: !Equals [!Ref CreateHostedZone, "true"]
-  CreatePublicCertificateCondition:
-    !Equals [!Ref CreatePublicCertificate, "true"]
 
 Resources:
   HostedZoneStack:
@@ -57,16 +51,17 @@ Resources:
     Properties:
       TemplateURL: ./infrastructure/resources/hosted-zone.yaml
 
-  CertificateStack:
-    Type: AWS::CloudFormation::Stack
-    Condition: CreateHostedZoneCondition
-    Properties:
-      TemplateURL: ./infrastructure/resources/acm-certificate.yaml
-      Parameters:
-        HostedZoneId: !If
-          - CreateHostedZoneCondition
-          - !GetAtt HostedZoneStack.Outputs.HostedZoneId
-          - !Ref HostedZoneId
+  ## NOTE: Manually create cert if not exist.
+  # CertificateStack:
+  #   Type: AWS::CloudFormation::Stack
+  #   Condition: CreateHostedZoneCondition
+  #   Properties:
+  #     TemplateURL: ./infrastructure/resources/acm-certificate.yaml
+  #     Parameters:
+  #       HostedZoneId: !If
+  #         - CreateHostedZoneCondition
+  #         - !GetAtt HostedZoneStack.Outputs.HostedZoneId
+  #         - !Ref HostedZoneId
 
   ApiGatewayLambdaStack:
     Type: AWS::CloudFormation::Stack
@@ -92,10 +87,7 @@ Resources:
     Properties:
       TemplateURL: ./infrastructure/resources/s3-cloudfront.yaml
       Parameters:
-        AcmCertificateArn: !If
-          - CreatePublicCertificateCondition
-          - !GetAtt CertificateStack.Outputs.CertificateArn
-          - !Ref AcmCertificateArn
+        AcmCertificateArn: AcmCertificateArn
         GlobalCloudFrontHostedZoneId: !Ref GlobalCloudFrontHostedZoneId
 
   RecordSetStack:
