--- a/template.yaml
+++ b/template.yaml
@@ -14,15 +14,14 @@ Parameters:
     Description: The Global CloudFront Hosted Zone ID
   HostedZoneId:
     Type: String
-    Description: The Domain Hosted Zone ID
+    Description: The Domain Hosted Zone ID. Value is overriden by deploy.sh if already exist
   CognitoDomainPrefix:
     Type: String
     Default: login
     Description: The Cognito User Pool domain prefix
   AcmCertificateArn:
     Type: String
-    Default: arn:aws:acm:us-east-1:121216464768:certificate/701751b5-62e5-4526-935f-aeae48311e3e
-    Description: The public certificate arn in us-east-1 region
+    Description: The public certificate arn in us-east-1 region. Value is overriden by deploy.sh if already exist
   AdminGroupName:
     Type: String
     Default: admin
@@ -50,18 +49,6 @@ Resources:
     Condition: CreateHostedZoneCondition
     Properties:
       TemplateURL: ./infrastructure/resources/hosted-zone.yaml
-
-  ## NOTE: Manually create cert if not exist.
-  # CertificateStack:
-  #   Type: AWS::CloudFormation::Stack
-  #   Condition: CreateHostedZoneCondition
-  #   Properties:
-  #     TemplateURL: ./infrastructure/resources/acm-certificate.yaml
-  #     Parameters:
-  #       HostedZoneId: !If
-  #         - CreateHostedZoneCondition
-  #         - !GetAtt HostedZoneStack.Outputs.HostedZoneId
-  #         - !Ref HostedZoneId
 
   ApiGatewayLambdaStack:
     Type: AWS::CloudFormation::Stack
